--- a/Work#3/style.css
+++ b/Work#3/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 body {
   --font-family: "Inter", sans-serif;
 }
@@ -14,6 +16,11 @@ body {
   font-weight: 400;
   font-size: 14px;
   color: #000;
+}
+
+.Menu_style_triangyl::after {
+    content: url(./img/menu_triangyl.svg);
+    margin-left: 3px;
 }
 
 .style_h1 {
@@ -39,6 +46,10 @@ body {
   height: 51px;
   box-shadow: 4px 4px 8px 0 rgba(242, 88, 34, 0.2);
   background: #f25822;
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 16px;
+  color: #fff;
 }
 
 .style_but_wath {
