--- a/Work#3/style.css
+++ b/Work#3/style.css
@@ -19,8 +19,8 @@ body {
 }
 
 .Menu_style_triangyl::after {
-    content: url(./img/menu_triangyl.svg);
-    margin-left: 3px;
+  content: url(./img/menu_triangyl.svg);
+  margin-left: 3px;
 }
 
 .style_h1 {
@@ -74,4 +74,9 @@ body {
 .img_braid_logo {
   width: 134px;
   height: 50px;
+}
+
+.conteiner {
+  max-width: 1174px;
+  margin: 0 auto;
 }
