--- a/Work#3/style.css
+++ b/Work#3/style.css
@@ -83,5 +83,15 @@ body {
 }
 
 .header {
-  padding: 37px 0;
+  padding: 40px 0;
+  margin-bottom: 84px;
 }
+
+.main {
+  margin-bottom: 100px;
+}
+
+.footer {
+  margin: 100px 0;
+}
+
