--- a/Work#3/style.css
+++ b/Work#3/style.css
@@ -9,6 +9,7 @@ body {
   font-weight: 600;
   font-size: 14px;
   color: #f25822;
+  margin-right: 14px;
 }
 
 .headerContent_style {
@@ -16,6 +17,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   color: #000;
+  margin: 14px;
 }
 
 .headerContent_style_triangyl::after {
@@ -65,6 +67,7 @@ body {
 .headerContent_img_logo {
   width: 137px;
   height: 40px;
+  margin-right: 460px;
 }
 
 .mainContent_img_main {
@@ -94,4 +97,3 @@ body {
 .footer {
   margin: 100px 0;
 }
-
