--- a/Work#4/style.css
+++ b/Work#4/style.css
@@ -10,6 +10,8 @@ body {
 }
 
 .header {
+  display: flex;
+  justify-content: space-between;
   padding-top: 40px;
   margin-bottom: 84px;
   padding-left: 373px;
@@ -26,7 +28,7 @@ body {
   justify-content: space-between;
   gap: 14px;
   align-items: center;
-  max-width: 577px;
+  width: 577px;
 }
 
 .headerContent_img_logo {
