add style, fount

--- a/Work#5/style.css
+++ b/Work#5/style.css
@@ -139,46 +139,180 @@ body {
 }
 
 .features {
-  
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  column-gap: 20px;
+
 }
 
-.card_features {
+.card_features_1 {
+  width: 310px;
+  height: 230px;
 
 }
 
-.features_img {
-  
+.card_features_2 {
+  padding: 40px 34px;
+  width: 378px;
+  height: 310px;
+  box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06);
+  background: #fff;
+
+
+/* у карточки есть воё наружное выделение */
+}
+
+.card_features_3 {
+  width: 310px;
+  height: 230px;
+
+}
+
+.features_img_1 {
+  content: url(./img/features_icon_red.svg);
+}
+
+.features_img_2 {
+  content: url(./img/features_icon_green.svg);
+}
+
+.features_img_3 {
+  content: url(./img/features_icon_yeelow.svg);
 }
 
 .features_style_h1 {
-
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 24px;
+  color: #000;
+  
 }
 
 .features_style_h2 {
-
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #666;
+  
 }
 
 .features_style_h3 {
-
-}
-
-.services_titel {
-
-}
-
-.services_titel_h1 {
-
-}
-
-.services_titel_h2 {
-
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 150%;
+  color: #000;
+  
 }
 
 .services {
+/* В секции есть свой отдельный фон */
+display: grid;
+grid-template-columns: repeat(9, 1fr);
+column-gap: 20px;
+padding: 100px 373px;
+width: 1920px;
+height: 916px;
+background: #fafafa;
+}
+
+.services_titel { 
+  width: 1174px;
+  height: 126px;
+  
+}
+
+.services_titel_h1 {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 120%;
+  text-align: center;
+  color: #000;
+  
+}
+
+.services_titel_h2 {
+font-family: var(--font-family);
+font-weight: 400;
+font-size: 16px;
+line-height: 140%;
+text-align: center;
+color: #888;
 
 }
 
-.services_card {
+.services_box {
+  width: 1174px;
+  height: 542px;
+  
+}
+
+.services_card_1 {
+  padding: 0px 34px 34px 34px;
+  width: 378px;
+  height: 542px;
+  background: #fff;
 
 }
 
+.services_card_2 {
+/* Укары свой фон т внешняя обводка*/
+padding: 0px 34px 34px 34px;
+width: 378px;
+height: 542px;
+
+box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06);
+background: #fff;
+
+}
+
+.services_card_3 {
+/* Укары свой фон */
+padding: 0px 34px 34px 34px;
+width: 378px;
+height: 542px;
+background: #fff;
+
+}
+
+.service_img {
+  width: 378px;
+  height: 284px;
+  
+}
+
+.services_style_h1 {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 24px;
+  text-align: center;
+  color: #000;
+  
+}
+
+.services_style_h2 {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  color: #666;
+  
+}
+
+.servoce_button {
+  border-radius: 56px;
+padding: 16px 32px;
+width: 166px;
+height: 51px;
+box-shadow: 4px 4px 8px 0 rgba(242, 88, 34, 0.2);
+background: #f25822;
+
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 16px;
+  color: #fff;
+  
+}
