--- a/Work#5/style.css
+++ b/Work#5/style.css
@@ -147,7 +147,7 @@ body {
   max-width: 1920px;
   max-height: 510px;
   padding-top: 100px;
-  margin-bottom: 100px; 
+  padding-bottom: 100px; 
 }
 
 .card_features_1 {
@@ -214,7 +214,14 @@ body {
 }
 
 .services {
-  
+display: grid;
+grid-template-columns: repeat(9, 1fr);
+column-gap: 20px;
+max-width: 1920px;
+max-height: 916px;
+padding-top: 100px;
+padding-bottom: 100px;
+background: rgb(250, 250, 250);
 }
 
 .services_titel {
