--- a/Work#5/style.css
+++ b/Work#5/style.css
@@ -272,6 +272,8 @@ body {
   background: #fff;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .services_card_2 {
@@ -282,6 +284,8 @@ body {
   background: #fff;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .services_card_3 {
@@ -291,6 +295,8 @@ body {
   background: #fff;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .service_img {
@@ -319,7 +325,6 @@ body {
 }
 
 .service_button {
-  
   border-radius: 56px;
   padding: 16px 32px;
   width: 166px;
