--- a/Work#5/style.css
+++ b/Work#5/style.css
@@ -5,8 +5,9 @@ body {
 }
 
 .conteiner {
-  max-width: 1174px;
-  margin: 0 auto;
+  max-width: 100%;
+  margin: 0 auto; 
+  padding: 0;
 }
 
 .header {
@@ -17,12 +18,12 @@ body {
   padding-top: 40px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .headerContent_menu {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   gap: 14px;
   align-items: center;
   width: 577px;
@@ -55,13 +56,11 @@ body {
 
 .main {
   margin-bottom: 100px;
-  padding-left: 373px;
-  padding-right: 373px;
 }
 
 .mainContent {
   display: flex;
-  justify-content: first baseline;
+  justify-content: center;
 }
 
 .mainContent_text_blok {
@@ -125,7 +124,7 @@ body {
 
 .down_logo_Content {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   gap: 48px;
   width: 100%;
   margin-top: 100px;
@@ -215,11 +214,15 @@ body {
 .services {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  max-width: 1920px;
+  width: 100vw;
   max-height: 916px;
   padding-top: 100px;
   padding-bottom: 100px;
   background: rgb(250, 250, 250);
+  justify-content: center;
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .services_titel {
@@ -263,6 +266,8 @@ body {
   max-height: 542px;
   grid-column: 2 / -2;
   grid-row: 2;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .services_card_1 {
