--- a/Work#6/style.css
+++ b/Work#6/style.css
@@ -1,72 +1,131 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 body {
   --font-family: "Lato", sans-serif;
 }
 
 .conteiner {
+  font-family: var(--font-family);
   max-width: 100%;
-  margin: 0 auto; 
+  margin: 0 auto;
   padding: 0;
+  /* Гриды под вопросом */
+  /* display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 30px; */
 }
 
 .header {
-
+  
 }
 
 .head_menu {
-  background: #222;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  background-image: url('./img/menu_fon.svg');
+  fill: #222;
+}
+
+.menu_left_site {
+  display: flex; 
+  align-items: center; 
+  justify-content: flex-start;
+  column-gap: 41px;
+  margin-left: 231px;
 }
 
 .menu_logo {
 
 }
 
-.menu_icon_search::after {
-  content: url(./img/icon_search.svg);
+.button_menu_icon_search {
+  /* content: url(./img/icon_search.svg);
+  fill: #e8e8e8; */
+  background-color: transparent;
+  border: none;
 }
 
-.menu_icon_menu::after {
-  content: url(./img/icon_menu.svg);
+.menu_rigth_site {
+  display: flex; 
+  align-items: center; 
+  justify-content: flex-end;
+  column-gap: 33px;
+  margin-right: 240px;
 }
 
-.menu_icon_profile::after {
-  content: url(./img/icon_profile.svg);
+.button_menu_icon_menu {
+  /* content: url(./img/icon_menu.svg);
+  fill: #e8e8e8; */
+  background-color: transparent;
+  border: none;
+  margin-top: 30px;
+  margin-bottom: 22px;
 }
 
-.menu_icon_backed::after {
-  content: url(./img/icon_basked.svg);
+.button_menu_icon_profile {
+  /* content: url(./img/icon_profile.svg);
+  fill: #e8e8e8; */
+  background-color: transparent;
+  border: none;
+  margin-top: 26px;
+  margin-bottom: 20px;
+}
+
+.button_menu_icon_backed {
+  /* content: url(./img/icon_basked.svg);
+  fill: #e8e8e8; */
+  background-color: transparent;
+  border: none;
+  margin-top: 26px;
+  margin-bottom: 20px;
 }
 
 .baner_backround {
+  display: flex; 
+  align-items: center; 
+  justify-content: space-between;
   background: rgb(241, 228, 230);
 }
 
-.baner_rigth_line_text {
-  border-left: 12px solid #f16d7f;
+.banner_image {
+  width: 800px;
+  height: 764px;
 }
 
+.baner_rigth_line_text {
+  
+  width: 405px;
+  height: 93px;
+  border-left: 12px solid #f16d7f;
+  margin-right: 331px;
+}
 
+.baner_rigth_line_text h1 {
+  font-weight: 900;
+  font-size: 48px;
+  color: #222;
+}
+
+.baner_rigth_line_text h2 {
+  font-weight: 700;
+  font-size: 32px;
+}
 
 .main {
-
 }
 
-.first_box {
-
+.offer_box {
 }
 
 .frst_card_image_1 {
-
 }
 
-.image_mask::after {
-  content: url(./img/mask_firt_box.svg);
+.image_mask {
+  background-image: url(./img/mask_firt_box.svg);
   fill: rgba(33, 22, 22, 0.7);
 }
 
 .text_card {
-
 }
 
 .baner_color_text {
@@ -74,31 +133,24 @@ body {
 }
 
 .second_card_image_1 {
-
 }
 
 .second_card_image_2 {
-
 }
 
 .Third_card_image_3 {
-
 }
 
 .Four_card_image_4 {
-
 }
 
-.second_box {
-
+.product_box {
 }
 
 .title_text_second_box_h1 {
-
 }
 
 .title_text_second_box_h2 {
-
 }
 
 .Item_box_image_1 {
@@ -106,11 +158,9 @@ body {
 }
 
 .text_item_box_h1 {
-
 }
 
 .text_item_box_h3 {
-
 }
 
 .price_text_box_h2 {
