--- a/Work#6/style.css
+++ b/Work#6/style.css
@@ -16,26 +16,24 @@ body {
 }
 
 .header {
-  
 }
 
 .head_menu {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  background-image: url('./img/menu_fon.svg');
+  background-image: url("./img/menu_fon.svg");
   fill: #222;
 }
 
 .menu_left_site {
-  display: flex; 
-  align-items: center; 
+  display: flex;
+  align-items: center;
   justify-content: flex-start;
   column-gap: 41px;
   margin-left: 231px;
 }
 
 .menu_logo {
-
 }
 
 .button_menu_icon_search {
@@ -46,8 +44,8 @@ body {
 }
 
 .menu_rigth_site {
-  display: flex; 
-  align-items: center; 
+  display: flex;
+  align-items: center;
   justify-content: flex-end;
   column-gap: 33px;
   margin-right: 240px;
@@ -81,8 +79,8 @@ body {
 }
 
 .baner_backround {
-  display: flex; 
-  align-items: center; 
+  display: flex;
+  align-items: center;
   justify-content: space-between;
   background: rgb(241, 228, 230);
 }
@@ -93,7 +91,6 @@ body {
 }
 
 .baner_rigth_line_text {
-  
   width: 405px;
   height: 93px;
   border-left: 12px solid #f16d7f;
@@ -112,17 +109,25 @@ body {
 }
 
 .main {
+  
+  
 }
 
 .offer_box {
-}
-
-.frst_card_image_1 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  max-width: 1140px;
+  max-height: 470px;
+  justify-content: center;
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  column-gap: 30px;
 }
 
 .image_mask {
-  background-image: url(./img/mask_firt_box.svg);
-  fill: rgba(33, 22, 22, 0.7);
+  /* background-image: url(./img/mask_firt_box.svg);
+  fill: rgba(33, 22, 22, 0.7); */
 }
 
 .text_card {
@@ -132,25 +137,48 @@ body {
   color: #f16d7f;
 }
 
-.second_card_image_1 {
+.frst_card_image_1 {
+  width: 360px;
+  height: 260px;
 }
 
 .second_card_image_2 {
+  width: 360px;
+  height: 260px;
 }
 
 .Third_card_image_3 {
+  width: 360px;
+  height: 260px;
 }
 
 .Four_card_image_4 {
+  width: 1140px;
+  height: 180px;
+  grid-column: 1 / -1;
+  grid-row: 2;
 }
 
 .product_box {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 1140px;
+  height: 1395px;
+  justify-items: center;
+  justify-content: center;
+  align-content: center;
+  column-gap: 30px;
 }
 
 .title_text_second_box_h1 {
+  grid-column: 1 / -1;
+  grid-row: 1;
+  margin-bottom: 6px;
 }
 
 .title_text_second_box_h2 {
+  grid-column: 1 / -1;
+  grid-row: 1;
 }
 
 .Item_box_image_1 {
