--- a/Work#6/style.css
+++ b/Work#6/style.css
@@ -196,8 +196,8 @@ body {
   justify-items: center;
   /* justify-content: center; */
   /* align-content: center; */
-  column-gap: 30px;
-  row-gap: 30px;
+  /* column-gap: 30px; */
+  /* margin-bottom: 30px; */
   padding-bottom: 95px;
 }
 
@@ -222,9 +222,7 @@ body {
   margin: 16px 24px;
 }
 
-.Item_box_image_1 {
-  background: rgb(248, 248, 248);
-}
+
 
 .text_item_box_h1 {
   font-weight: 400;
@@ -246,23 +244,46 @@ body {
   color: rgb(241, 109, 127);
 }
 
-.Item_box_image_2 {
+.Item_box_image_1 {
+  width: 360px;
+  height: 587x;
   background: rgb(248, 248, 248);
+  margin-bottom: 30px;
+  margin-right: 30px;
+}
+
+.Item_box_image_2 {
+  width: 360px;
+  height: 587x;
+  background: rgb(248, 248, 248);
+  margin-bottom: 30px;
+  margin-right: 30px;
 }
 
 .Item_box_image_3 {
+  width: 360px;
+  height: 587x;
   background: rgb(248, 248, 248);
+  margin-bottom: 30px;
 }
 
 .Item_box_image_4 {
+  width: 360px;
+  height: 587x;
   background: rgb(248, 248, 248);
+  margin-right: 30px;
 }
 
 .Item_box_image_5 {
+  width: 360px;
+  height: 587x;
   background: rgb(248, 248, 248);
+  margin-right: 30px;
 }
 
 .Item_box_image_6 {
+  width: 360px;
+  height: 587x;
   background: rgb(248, 248, 248);
 }
 
@@ -271,6 +292,7 @@ body {
   width: 211px;
   height: 47px;
   border: 1px solid rgb(255, 106, 106);
+  color: #f16d7f;
   grid-column: 2 / -2;
   margin-top: 48px;
 }
