--- a/Work#6/style.css
+++ b/Work#6/style.css
@@ -21,6 +21,7 @@ body {
   grid-template-columns: repeat(2, 1fr);
   background-image: url("./img/menu_fon.svg");
   fill: #222;
+  background-size: cover;
 }
 
 .menu_left_site {
@@ -124,8 +125,6 @@ body {
   max-height: 470px;
   justify-content: center;
   align-content: center;
-  margin-left: auto;
-  margin-right: auto;
   column-gap: 30px;
   row-gap: 30px;
   padding-top: 65px;
