--- a/Work#7/style.css
+++ b/Work#7/style.css
@@ -115,14 +115,14 @@ body {
   margin-left: 63px;
 }
 
-.baner_rigth_line_text h1 {
+.baner_rigth_line_text_h1 {
   font-weight: 900;
   font-size: 48px;
   color: #222;
   margin-left: 16px;
 }
 
-.baner_rigth_line_text h2 {
+.baner_rigth_line_text_h2 {
   font-weight: 700;
   font-size: 32px;
   margin-left: 16px;
@@ -304,6 +304,8 @@ body {
 
 .brouse_button {
   background-color: transparent;
+  font-weight: 400;
+  font-size: 16px;
   width: 211px;
   height: 47px;
   border: 1px solid rgb(255, 106, 106);
@@ -318,8 +320,42 @@ body {
   }
 
   .head_menu::before,
-.head_menu::after {
+  .head_menu::after {
   width: 0px; 
+  }
+
+  .menu_left_site {
+    margin-left: 32px;
+  }
+
+  .menu_rigth_site {
+    margin-right: 41px;
+  }
+  
+  .baner_rigth_line_text {
+    width: 311px;
+    height: 92px;
+    border-left: 12px solid #f16d7f;
+    margin-left: 39px;
+  }
+  
+  .baner_rigth_line_text_h1 {
+    font-weight: 900;
+    font-size: 44px;
+    color: #222;
+    margin-left: 16px;
+  }
+  
+  .baner_rigth_line_text_h2 {
+    font-weight: 700;
+    font-size: 24px;
+    margin-left: 16px;
+  }
+  
+  .head_baner_color_text {
+    font-weight: 700;
+    font-size: 24px;
+    color: #f16d7f;
   }
 
   .banner_image {
@@ -332,35 +368,42 @@ body {
     max-height: 303px;
     column-gap: 20px;
     row-gap: 20px;
+    padding-bottom: 110px;
   }
 
   .frst_card_image_1 {
     width: 232px;
     height: 167px;
+    background-size: cover;
   }
 
   .second_card_image_2 {
     width: 232px;
     height: 167px;
+    background-size: cover;
   }
 
   .Third_card_image_3 {
     width: 232px;
     height: 167px;
+    background-size: cover;
   }
 
   .Four_card_image_4 {
     width: 736px;
     height: 116px;
+    background-size: cover;
   }
 
   .product_box {
     max-width: 736px;
+    padding-bottom: 70px;
     gap: 16px; 
   }
 
   .brouse_button {
     grid-column: 1 / -1;
+    margin-top: 32px;
   }
 
 }
