--- a/Work#6/style.css
+++ b/Work#6/style.css
@@ -115,14 +115,14 @@ body {
   margin-left: 63px;
 }
 
-.baner_rigth_line_text h1 {
+.baner_rigth_line_text_h1 {
   font-weight: 900;
   font-size: 48px;
   color: #222;
   margin-left: 16px;
 }
 
-.baner_rigth_line_text h2 {
+.baner_rigth_line_text_h2 {
   font-weight: 700;
   font-size: 32px;
   margin-left: 16px;
@@ -304,6 +304,8 @@ body {
 
 .brouse_button {
   background-color: transparent;
+  font-weight: 400;
+  font-size: 16px;
   width: 211px;
   height: 47px;
   border: 1px solid rgb(255, 106, 106);
